Bug #48600
osd: valgrind: Invalid read of size 8
Status:
Resolved
Priority:
Normal
Assignee:
Category:
Correctness/Safety
Target version:
% Done:
0%
Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Description
... <error> <unique>0x0</unique> <tid>81</tid> <threadname>tp_osd_tp</threadname> <kind>InvalidRead</kind> <what>Invalid read of size 8</what> <stack> <frame> <ip>0xDB10AC</ip> <obj>/usr/bin/ceph-osd</obj> <fn>ceph::common::RefCountedObject::put() const</fn> <dir>/usr/src/debug/ceph-16.0.0-8264.ga2a58140.el8.x86_64/src/common</dir> <file>RefCountedObj.cc</file> <line>18</line> </frame> <frame> <ip>0x9D0B50</ip> <obj>/usr/bin/ceph-osd</obj> <fn>intrusive_ptr_release</fn> <dir>/usr/src/debug/ceph-16.0.0-8264.ga2a58140.el8.x86_64/src/common</dir> <file>RefCountedObj.h</file> <line>194</line> </frame> <frame> <ip>0x9D0B50</ip> <obj>/usr/bin/ceph-osd</obj> <fn>~intrusive_ptr</fn> <dir>/usr/src/debug/ceph-16.0.0-8264.ga2a58140.el8.x86_64/build/boost/include/boost/smart_ptr</dir> <file>intrusive_ptr.hpp</file> <line>98</line> </frame> <frame> <ip>0x9D0B50</ip> <obj>/usr/bin/ceph-osd</obj> <fn>PeeringState::send_lease()</fn> <dir>/usr/src/debug/ceph-16.0.0-8264.ga2a58140.el8.x86_64/src/osd</dir> <file>PeeringState.cc</file> <line>1165</line> </frame> <frame> <ip>0x9E6B70</ip> <obj>/usr/bin/ceph-osd</obj> <fn>proc_renew_lease</fn> <dir>/usr/src/debug/ceph-16.0.0-8264.ga2a58140.el8.x86_64/src/osd</dir> <file>PeeringState.cc</file> <line>1255</line> </frame> <frame> <ip>0x9E6B70</ip> <obj>/usr/bin/ceph-osd</obj> <fn>PeeringState::proc_renew_lease()</fn> <dir>/usr/src/debug/ceph-16.0.0-8264.ga2a58140.el8.x86_64/src/osd</dir> <file>PeeringState.cc</file> <line>1249</line> </frame> ...
From: /ceph/teuthology-archive/pdonnell-2020-12-13_06:09:39-fs-wip-pdonnell-testing-20201213.040840-distro-basic-smithi/5705438/remote/smithi035/log/valgrind/osd.3.log.gz
History
#1 Updated by Patrick Donnelly about 1 month ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 38573
#2 Updated by Kefu Chai about 1 month ago
- Status changed from Fix Under Review to Resolved