osd: remove invalid put on message

This has already been converted to use smart pointers. This put the
method return to double-put the MessageRef argument.

Fixes: https://tracker.ceph.com/issues/48600
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>